# enterprise-ai

./: .gitignore  .gitlab-ci.yml  CHANGELOG.md  CLAUDE.md  README.md  TASK.md
.claude/: settings.local.json
admin/: Dockerfile  eslint.config.js  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
admin/src/: App.tsx  index.css
admin/src/api/: admin.ts  analytics.ts  auth.ts  client.ts  health.ts  knowledge_sources.ts
admin/src/contexts/: AuthContext.tsx
admin/src/pages/: AnalyticsPage.tsx  AuditPage.tsx  DashboardPage.tsx  (+5 more)
backend/: .dockerignore  .env.example  CLAUDE.md  Dockerfile  alembic.ini  entrypoint.sh  requirements-test.txt  requirements.txt
backend/alembic/: env.py
backend/app/: main.py
backend/tests/: conftest.py  test_admin.py  test_auth.py  test_chat.py  test_config.py  test_documents.py  test_health.py  test_ingestion.py  test_ollama.py  test_rbac.py  test_search.py  test_settings.py
desktop/: .env.example  README.md  build-all.sh  package-lock.json  package.json
desktop/src/: App.tsx
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/src/: commands.rs  lib.rs
docs/: API.md  ARCHITECTURE.md  FORENSIC_REPORT.md  SETUP.md  USER-GUIDE.md
frontend/: .dockerignore  .env.example  eslint.config.js  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
frontend/src/: App.test.tsx  App.tsx
infra/: CLAUDE.md  docker-compose.yml
infra/scripts/: backup.sh  health-check.sh
scripts/: file_watcher_standalone.py
(+133 files in other folders)
