[package]
name = "aiyedun-desktop"
version = "1.0.0"
description = "Aiyedun Desktop Agent — offline-first enterprise AI assistant"
authors = ["Aiyedun"]
edition = "2021"

[lib]
name = "aiyedun_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-notification = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-autostart = "2"
tauri-plugin-store = "2"
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
